--- a/src/main/resources/templates/common/fragments/nav.html
+++ b/src/main/resources/templates/common/fragments/nav.html
@@ -13,7 +13,7 @@
                         <a class="nav-link" href="/">메인</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="/forum">게시판</a>
+                        <a class="nav-link" href="/forum/">게시판</a>
                     </li>
                 </ul>
             </div>
