--- a/src/main/resources/templates/page/read.html
+++ b/src/main/resources/templates/page/read.html
@@ -46,7 +46,7 @@
             </table><br><br>
 
             <tr>
-                <td><span th:text="${forumPage.mainText}"/></td>
+                <td><span th:text="${forumPage.main_text}"/></td>
             </tr>
         </div>
     </body>
