--- a/src/main/resources/templates/page/update.html
+++ b/src/main/resources/templates/page/update.html
@@ -46,7 +46,7 @@
 
                 <tr style="height: 300px;">
                     <td>내용</td>
-                    <td><textarea name="mainText" id="mainText" rows="10" cols="50" th:text="${forumPage.mainText}"></textarea></td>
+                    <td><textarea name="main_text" id="main_text" rows="10" cols="50" th:text="${forumPage.main_text}"></textarea></td>
                 </tr>
 
                 <button type="submit">수정</button>
