--- a/src/main/resources/templates/page/write.html
+++ b/src/main/resources/templates/page/write.html
@@ -41,7 +41,7 @@
 
                 <tr style="height: 300px;">
                     <td>내용</td>
-                    <td><textarea name="text" id="text" rows="10" cols="50"></textarea></td>
+                    <td><textarea name="main_text" id="main_text" rows="10" cols="50"></textarea></td>
                 </tr>
 
                 <button type="submit">작성</button>
