--- a/src/main/resources/templates/page/read.html
+++ b/src/main/resources/templates/page/read.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="UTF-8"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{common/layouts/defaultLayout}"
-      layout:fragment="Content">
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{common/layouts/defaultLayout}"
+        layout:fragment="Content">
     <head>
         <meta charset="UTF-8">
 
@@ -38,9 +38,9 @@
                         <td><span th:text="${forumPage.id}"/></td>
                         <td><span th:text="${forumPage.category}"/></td>
                         <td><span th:text="${forumPage.title}"/></td>
-                        <td><span th:text="${forumPage.author}"/></td>
-                        <td><button>수정</button></td>
-                        <td><button>삭제</button></td>
+                        <td><a th:href="@{users(id=${forumPage.author})}"><span th:text="${forumPage.author}"/></a></td>
+                        <td><a th:href="@{update(id=${forumPage.id})}"><button type="button">수정</button></a></td> &nbsp; &nbsp;
+                        <td><a th:href="@{delete(id=${forumPage.id})}"><button type="button">삭제</button></a></td>
                     </tr>
                 </tbody>
             </table><br><br>
