--- a/src/main/resources/templates/common/fragments/login.html
+++ b/src/main/resources/templates/common/fragments/login.html
@@ -20,7 +20,7 @@
 
             <div align="center">
                 로그인<br><br>
-                <form action="/login" method="post">
+                <form action="/login/" method="post">
                     <div class="form-group">
                         <input type="text" id="loginID" name="loginID" placeholder="아이디"><br>
                         <input type="password" id="loginPassword" name="loginPassword" placeholder="비밀번호"><br>
